Added movie page to app

--- a/client/web/static/css/base.css
+++ b/client/web/static/css/base.css
@@ -115,6 +115,8 @@ nav {
 	display: flex;
 	justify-content: center;
 	align-content: center;
+}
+.movie-poster, .person-poster {
 	align-self: center;
 }
 /* every movie poster size in movie lists */
