--- a/client/web/template/movie.html
+++ b/client/web/template/movie.html
@@ -1,72 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/base.css">
+{% extends "base.html" %}
+
+{% block css %}
 	<link rel="stylesheet" type="text/css" href="../static/css/movie.css">
-	<script type="text/javascript" src="../static/js/base.js"></script>
-	<title>Movie | Filmer</title>
-</head>
-<body>
-	<header>
-		<nav>
-			<div class="logo-container">
-				<button class="nav-elem logo"><a href="./index.html">
-					<img src="../static/img/favicon.ico" alt="logo">
-				</a></button>
-			</div>
-			<div class="right-nav-container">
-				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-search-link" href="./search.html">search</a>
-				</button>
-				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-stared-link" href="./stared.html">stared</a>
-				</button>
-				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-want-link" href="#">want</a>
-				</button>
-				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-watched-link" href="#">watched</a>
-				</button>
+{% endblock %}
 
-				<button class="nav-elem profile"><a href="./profile.html">
-					<img src="../static/img/profile.svg" alt="profile">
-				</a></button>
-			</div>
-		</nav>
+{% block title %}Movie | Filmer{% endblock %}
 
-		<h1 class="title">Filmer</h1>
-	</header>
-
+{% block content %}
 	<div class="content flex-content">
 		<div class="movie">
 			<div class="movie-poster-big">
-				<img src='https://kinopoiskapiunofficial.tech/images/posters/kp_small/301.jpg'>
+				<img src='{{ movie.imgURL|default:"/static/img/non_poster.svg" }}'>
 			</div>
 
 			<div class="movie-full-info">
 				<div class="movie-full-info-header">
-					<h3 class="movie-title"><span class="accent">Матрица</span></h3>
+					<h3 class="movie-title"><span class="accent">{{ movie.title }}</span></h3>
 
 					<div class="movie-extra">
-						<a id="external-link" class="movie-extra-icon" href="https://www.kinopoisk.ru/film/301/">
+						<a id="external-link" class="movie-extra-icon" href="{{ movie.webURL }}">
 							<button type="button">
 								<svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" x2="21" y1="14" y2="3"/></svg>
 							</button>
 						</a>
-						<form data-active="false" id="stared" class="movie-extra-icon" action="#" method="post">
+						<form data-active="{{ stared }}" id="stared" class="movie-extra-icon" action="#" method="post">
 							<button type="submit">
 								<svg class="fill-static-white fill-hover-light-red" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M34 6H14c-2.21 0-3.98 1.79-3.98 4L10 42l14-6 14 6V10c0-2.21-1.79-4-4-4z"/><path d="M0 0h48v48H0z" fill="none"/></svg>
 							</button>
 						</form>
-						<form data-active="true" id="want" class="movie-extra-icon" action="#" method="post">
+						<form data-active="{{ want }}" id="want" class="movie-extra-icon" action="#" method="post">
 							<button type="submit">
 								<svg class="fill-static-white fill-hover-light-red" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0,0,256,256"><g fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M11.98438,-0.01367c-0.55152,0.00862 -0.99193,0.46214 -0.98437,1.01367v1c-0.0051,0.36064 0.18438,0.69608 0.49587,0.87789c0.3115,0.18181 0.69676,0.18181 1.00825,0c0.3115,-0.18181 0.50097,-0.51725 0.49587,-0.87789v-1c0.0037,-0.2703 -0.10218,-0.53059 -0.29351,-0.72155c-0.19133,-0.19097 -0.45182,-0.29634 -0.72212,-0.29212zM4.18945,3.18945c-0.40692,0.00011 -0.77321,0.24676 -0.92633,0.62377c-0.15312,0.37701 -0.06255,0.80921 0.22907,1.09303l0.70117,0.70117c0.25082,0.26123 0.62327,0.36646 0.9737,0.2751c0.35044,-0.09136 0.62411,-0.36503 0.71546,-0.71546c0.09136,-0.35044 -0.01387,-0.72288 -0.2751,-0.9737l-0.70117,-0.70117c-0.18827,-0.19353 -0.4468,-0.30272 -0.7168,-0.30273zM19.78125,3.18945c-0.2598,0.00774 -0.50638,0.11632 -0.6875,0.30273l-0.70117,0.70117c-0.26123,0.25082 -0.36646,0.62326 -0.2751,0.9737c0.09136,0.35044 0.36503,0.6241 0.71546,0.71546c0.35044,0.09136 0.72288,-0.01387 0.9737,-0.2751l0.70117,-0.70117c0.29576,-0.28749 0.38469,-0.72707 0.22393,-1.10691c-0.16075,-0.37985 -0.53821,-0.62204 -0.9505,-0.60988zM12,5c-3.9,0 -7,3.1 -7,7c0,2.8 1.6,5.20078 4,6.30078v2.69922c0,1.1 0.9,2 2,2h2c1.1,0 2,-0.9 2,-2v-2.69922c2.4,-1.1 4,-3.50078 4,-6.30078c0,-3.9 -3.1,-7 -7,-7zM1,11c-0.36064,-0.0051 -0.69608,0.18438 -0.87789,0.49587c-0.18181,0.3115 -0.18181,0.69676 0,1.00825c0.18181,0.3115 0.51725,0.50097 0.87789,0.49587h1c0.36064,0.0051 0.69608,-0.18438 0.87789,-0.49587c0.18181,-0.3115 0.18181,-0.69676 0,-1.00825c-0.18181,-0.3115 -0.51725,-0.50097 -0.87789,-0.49587zM22,11c-0.36064,-0.0051 -0.69608,0.18438 -0.87789,0.49587c-0.18181,0.3115 -0.18181,0.69676 0,1.00825c0.18181,0.3115 0.51725,0.50097 0.87789,0.49587h1c0.36064,0.0051 0.69608,-0.18438 0.87789,-0.49587c0.18181,-0.3115 0.18181,-0.69676 0,-1.00825c-0.18181,-0.3115 -0.51725,-0.50097 -0.87789,-0.49587zM4.88086,18.08984c-0.2598,0.00774 -0.50638,0.11632 -0.6875,0.30273l-0.70117,0.70117c-0.26124,0.25082 -0.36647,0.62327 -0.27511,0.97371c0.09136,0.35044 0.36503,0.62411 0.71547,0.71547c0.35044,0.09136 0.72289,-0.01387 0.97371,-0.27511l0.70117,-0.70117c0.29576,-0.28749 0.38469,-0.72707 0.22393,-1.10691c-0.16075,-0.37985 -0.53821,-0.62204 -0.9505,-0.60988zM19.08984,18.08984c-0.40692,0.00011 -0.77321,0.24676 -0.92633,0.62377c-0.15312,0.37701 -0.06255,0.80922 0.22907,1.09303l0.70117,0.70117c0.25082,0.26124 0.62327,0.36648 0.97371,0.27512c0.35044,-0.09136 0.62411,-0.36503 0.71547,-0.71547c0.09136,-0.35044 -0.01388,-0.72289 -0.27512,-0.97371l-0.70117,-0.70117c-0.18827,-0.19353 -0.4468,-0.30272 -0.7168,-0.30273z"></path></g></g></svg>
 							</button>
 						</form>
-						<form data-active="false" id="watched" class="movie-extra-icon" action="#" method="post">
+						<form data-active="{{ watched }}" id="watched" class="movie-extra-icon" action="#" method="post">
 							<button type="submit">
 								<svg class="fill-static-white fill-hover-light-red" viewBox="0 0 24 24"><g><g><path d="M12,4C4.063,4-0.012,12-0.012,12S3.063,20,12,20c8.093,0,12.011-7.969,12.011-7.969S20.062,4,12,4z M12.018,17c-2.902,0-5-2.188-5-5c0-2.813,2.098-5,5-5c2.902,0,5,2.187,5,5C17.018,14.812,14.92,17,12.018,17z M12.018,9c-1.658,0.003-3,1.393-3,3c0,1.606,1.342,3,3,3c1.658,0,3-1.395,3-3C15.018,10.392,13.676,8.997,12.018,9z"/></g></g></svg>
 							</button>
@@ -76,131 +43,77 @@
 
 				<div class="movie-full-info-footer">
 					<p class="movie-description">
-						Жизнь Томаса Андерсона разделена на две части: днём он — самый обычный офисный работник, получающий нагоняи от начальства, а ночью превращается в хакера по имени Нео, и нет места в сети, куда он бы не смог проникнуть. Но однажды всё меняется. Томас узнаёт ужасающую правду о реальности.
+						{{ movie.description }}
 					</p>
 					<div class="movie-info">
 						<label>Type:</label>
-						<p>фильм</p>
+						<p>{{ movie.type|default:"фильм" }}</p>
 
 						<label>Rating:</label>
-						<p>8.5</p>
+						{% if movie.rating == 0.0 %}
+						    <p>-</p>
+						{% else %}
+							<p>{{ movie.rating|floatformat:1 }}</p>
+						{% endif %}
 
 						<label>Year:</label>
-						<p>1999</p>
+						{% if movie.year == 0.0 %}
+						    <p>-</p>
+						{% else %}
+							<p>{{ movie.year|floatformat:0 }}</p>
+						{% endif %}
 
 						<label>Length:</label>
-						<p>2:16</p>
+						<p>{{ movie.movieLength|default:"-" }}</p>
 
-						<label class="movie-genre-list">Genres:</label>
+						<label>Genres:</label>
 						<div class="movie-genre-list">
 							<ul>
-								<li>аниме</li>
-								<li>мультфильм</li>
-								<li>фантастика</li>
-								<li>боевик</li>
-								<li>триллер</li>
-								<li>приключения</li>
-								<li>фантастика</li>
-								<li>детектив</li>
-								<li>ужасы</li>
-								<li>триллер</li>
-								<li>драма</li>
-								<li>криминал</li>
+								{% if movie.genres|length == 0 %}
+									<li>-</li>
+								{% else %}
+									{% for genre in movie.genres %}
+										<li>{{ genre.genre }}</li>
+									{% endfor %}
+								{% endif %}
 							</ul>
 						</div>
 
 						<label>Last update:</label>
-						<p>2025-02-28 22:00:05 UTC</p>
+						<p>{{ movie.updatedAt|default:"-" }}</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<h3 class="movie-staff-header">Directors:</h3>
-		<div class="movie-persons movie-directors">
-			<div class="person">
-				<div class="person-poster">
-					<img src='../static/img/non_poster.svg'>
+		{% if movie.staff.directors|length != 0 %}
+			<h3 class="movie-staff-header">Directors:</h3>
+			<div class="movie-persons movie-directors">
+			{% for director in movie.staff.directors %}
+				<div class="person">
+					<div class="person-poster">
+						<img src='{{ director.imgUrl|default:"/static/img/non_poster.svg" }}'>
+					</div>
+					<p class="person-name">{{ director.name }}</p>
 				</div>
-				<p class="person-name">Лана Вачовски</p>
+			{% endfor %}
 			</div>
-		</div>
+		{% endif %}
 
-		<h3 class="movie-staff-header">Actors:</h3>
-		<div class="movie-persons movie-actors">
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
+		{% if movie.staff.actors|length != 0 %}
+			<h3 class="movie-staff-header">Actors:</h3>
+			<div class="movie-persons movie-actors">
+			{% for actor in movie.staff.actors %}
+				<div class="person">
+					<div class="person-poster">
+						<img src='{{ actor.imgUrl|default:"/static/img/non_poster.svg" }}'>
+					</div>
+					<span class="accent">{{ actor.role }}</span>
+					<p class="person-name">{{ actor.name }}</p>
 				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
+			{% endfor %}
 			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-
-			<div class="person">
-				<div class="person-poster">
-					<img src='https://st.kp.yandex.net/images/actor_iphone/iphone360_7836.jpg'>
-				</div>
-				<span class="accent">Neo</span>
-				<p class="person-name">Киану Ривз</p>
-			</div>
-		</div>
+		{% endif %}
 	</div>
 	<script type="text/javascript" src="../static/js/movie.js"></script>
-</body>
-</html>
+{% endblock %}
