--- a/client/web/static/css/pagination.css
+++ b/client/web/static/css/pagination.css
@@ -1,4 +1,53 @@
-.non-visible {
-	display: none;
+#pagination {
+	margin-top: 40px;
+
+	display: flex;
+	gap: 7px;
 }
 
+.page-three-dots, .page-button, .page-button-active {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	user-select: none;
+}
+
+.page-three-dots {
+	letter-spacing: 1px;
+	padding: 10px 5px;
+}
+.page-button, .page-button-active {
+	padding: 10px;
+	border-radius: 7px;
+	min-width: 45px;
+
+	background-color: var(--light-gray);
+}
+
+.page-button:hover {
+	background-color: var(--gray);
+}
+
+.page-button-active {
+	border: solid 2px var(--light-red);
+}
+
+
+/* for width to 750px and less */
+@media screen and (max-width: 750px) {
+	#pagination {
+		margin-top: 30px;
+		gap: 4px;
+	}
+
+	.page-three-dots {
+		letter-spacing: 0px;
+		padding: 10px 3px;
+	}
+
+	.page-button, .page-button-active {
+		padding: 5px;
+		min-width: 30px;
+	}
+}
