Added stared (and want and watched) page layout

--- a/client/web/template/search.html
+++ b/client/web/template/search.html
@@ -11,7 +11,7 @@
 	<div class="content flex-content">
 		<h3>Search movies</h3>
 
-		<form onsubmit="addQueryParamsToForm(this)" class="search-form" action="/movie/search" method="get">
+		<form onsubmit="addQueryParamsToForm(this)" class="search-form" action="" method="get">
 			<div class="form-input">
 				<img src="/static/img/search.svg">
 				<input class="form-elem" type="text" id="search-keyword" name="q" placeholder="search movies">
