Added adaptive for sort and filters (modal window for mobiles)

--- a/client/web/template/stared_want_watched.html
+++ b/client/web/template/stared_want_watched.html
@@ -11,6 +11,7 @@
 	<title>Filmer</title>
 </head>
 <body>
+
 	<header>
 		<nav>
 			<div class="logo-container">
@@ -41,6 +42,13 @@
 		<h1 class="title">Filmer</h1>
 	</header>
 
+	<div id="modal-flex-settings">
+		<div class="modal-close">
+            <svg version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="grid_system"/><g id="_icons"><path d="M5.3,18.7C5.5,18.9,5.7,19,6,19s0.5-0.1,0.7-0.3l5.3-5.3l5.3,5.3c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3   c0.4-0.4,0.4-1,0-1.4L13.4,12l5.3-5.3c0.4-0.4,0.4-1,0-1.4s-1-0.4-1.4,0L12,10.6L6.7,5.3c-0.4-0.4-1-0.4-1.4,0s-0.4,1,0,1.4   l5.3,5.3l-5.3,5.3C4.9,17.7,4.9,18.3,5.3,18.7z"/></g></svg>
+        </div>
+        <div class="modal-window"></div>
+	</div>
+
 	<div class="content">
 		<h3 class="subtitle">Stared movies</h3>
 
@@ -60,7 +68,6 @@
 					</div>
 				</div>
 
-				<!-- <form id="filter-form" onsubmit="addSortParamsToForm(this)" class="settings" action="" method="get"> -->
 				<form id="filter-form" class="settings" action="" method="get">
 					<p class="setting-header">Filters</p>
 
@@ -234,6 +241,11 @@
 					<button class="filters-submit-btn" type="submit">Apply</button>
 				</form>
 			</div>
+
+			<div id="burger-flex-settings">
+				<button id="burger-btn">sort and filters</button>
+			</div>
+
 			<div class="list-movies"></div>
 		</div>
 	</div>
