--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -238,3 +238,92 @@
 .filter-year::-webkit-inner-spin-button {
 	display: none;
 }
+
+/* --------------- *
+ * burger settings *
+ * --------------- */
+
+#burger-flex-settings {
+	display: none;
+	width: 100%;
+}
+#burger-btn {
+	width: 100%;
+
+	color: var(--light-red);
+	font-size: 20px;
+	background-color: var(--light-gray);
+	border-radius: 15px;
+
+	padding-top: 5px;
+	padding-bottom: 5px;
+	cursor: pointer;
+}
+#burger-btn:hover {
+	background-color: var(--gray);
+}
+
+#modal-flex-settings {
+	display: none;
+	top: 0;
+	left: 0;
+
+	background-color: var(--dark-gray);
+/* 	background-color: white; */
+	position: absolute;
+	width: 100%;
+	height: 100%;
+
+	box-sizing: border-box;
+	padding: 15px;
+	overflow-y: scroll;
+	text-align: center;
+}
+
+.modal-close {
+	position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+}
+.modal-close svg {
+	fill: var(--light-red);
+}
+
+.modal-window {
+	margin-top: 60px;
+}
+
+/* for width to 1080px and less */
+@media screen and (max-width: 1080px) {
+	.flex-content {
+		flex-direction: column;
+	}
+}
+
+/* for width to 750px and less */
+@media screen and (max-width: 750px) {
+	.flex-content {
+		margin: auto 10px 150px 10px;
+	}
+
+	.setting-header {
+		font-size: 22px;
+	}
+	.sort-field-link, .sort-order-link, .checkbox-btn, .radio-button, .filter-year, .range-value {
+		font-size: 16px;
+	}
+	.filters-submit-btn {
+		font-size: 18px;
+	}
+
+	.checkbox-btn span {
+		padding: 1px 9px;
+	}
+
+	.settings {
+		width: 317px;
+	}
+}
