--- a/client/web/template/movie.html
+++ b/client/web/template/movie.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="../static/css/movie.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/movie.css">
 {% endblock %}
 
 {% block title %}Movie | Filmer{% endblock %}
@@ -115,5 +115,5 @@
 			</div>
 		{% endif %}
 	</div>
-	<script type="text/javascript" src="../static/js/movie.js"></script>
+	<script type="text/javascript" src="/static/js/movie.js"></script>
 {% endblock %}
