--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -3,16 +3,23 @@
 	user-select: none;
 	margin-bottom: 10px;
 }
-
-.flex-content {
-	margin: auto 15px 150px 15px;
-
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 15px;
+#found-total {
+	margin-bottom: 15px;
 }
 
+.flex-content-column {
+	margin: auto 15px 150px 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.flex-content-row {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	gap: 15px;
+}
 #flex-settings {
 	display: flex;
 	flex-direction: column;
@@ -21,7 +28,7 @@
 .settings {
 	display: flex;
 	flex-direction: column;
-	margin: 5px auto;
+/* 	margin: 5px auto; */
 	padding: 20px;
 	gap: 5px;
 
@@ -29,6 +36,9 @@
 	box-shadow: 0px 0px 25px 1px var(--light-black);
 	border-radius: 20px;
 	width: 350px;
+}
+#order-settings {
+	margin-bottom: 15px;
 }
 .setting-header {
 	font-size: 25px;
@@ -267,6 +277,7 @@
 	display: none;
 	top: 0;
 	left: 0;
+	z-index: 1000;
 
 	background-color: var(--dark-gray);
 /* 	background-color: white; */
@@ -282,8 +293,8 @@
 
 .modal-close {
 	position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 10px;
+    right: 10px;
     width: 48px;
     height: 48px;
     cursor: pointer;
@@ -298,15 +309,22 @@
 
 /* for width to 1080px and less */
 @media screen and (max-width: 1080px) {
-	.flex-content {
+	.flex-content-row {
 		flex-direction: column;
+	}
+	#flex-settings {
+		width: 100%;
+	    align-items: center;
 	}
 }
 
 /* for width to 750px and less */
 @media screen and (max-width: 750px) {
-	.flex-content {
-		margin: auto 10px 150px 10px;
+	h3 {
+		font-size: 25px;
+	}
+	.flex-content-row {
+		margin: auto 10px;
 	}
 
 	.setting-header {
@@ -324,6 +342,6 @@
 	}
 
 	.settings {
-		width: 317px;
+		width: 325px;
 	}
 }
