--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -12,11 +12,11 @@
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
-					<input class="form-elem" type="email" id="email" name="email" placeholder="user@example.com">
+					<input class="form-elem" type="email" id="email" name="email" placeholder="user@example.com" required>
 				</div>
 				<div class="form-elem form-input">
 					<label for="password">Password</label>
-					<input class="form-elem" type="password" id="password" name="password">
+					<input class="form-elem" type="password" id="password" name="password" required>
 				</div>
 			</div>
 			<button class="form-elem" type="submit">Login</button>
