--- a/client/web/template/profile.html
+++ b/client/web/template/profile.html
@@ -2,6 +2,7 @@
 
 {% block css %}
 	<link rel="stylesheet" type="text/css" href="/static/css/profile.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/signup_login.css">
 {% endblock %}
 
 {% block title %}Profile | Filmer{% endblock %}
@@ -16,13 +17,29 @@
 			<span id="hours">{{ hours }}</span>h
 			<span id="minutes">{{ minutes }}</span>m
 			<span id="seconds">{{ seconds }}</span>s
-			<!-- <span id="hours">0</span>h
-			<span id="minutes">0</span>m
-			<span id="seconds">0</span>s -->
 		</p>
 
 		<form onsubmit="addQueryParamsToForm(this)" id="link-button-form" action="/user/logout" method="post">
 			<button id="link-button" class="link-button" type="submit">Logout Now</button>
+		</form>
+
+		<form id="change-passwd-form" action="/user/change-password" method="post">
+			<h4>Change password</h4>
+			{% if passwdChangedOK %}
+				<p class="success change-passwd">Password was changed sucessfully!</p>
+			{% endif %}
+
+			<div class="form-elem form-input-container">
+				<div class="form-elem form-input">
+					<label for="current-password">Current password</label>
+					<input class="form-elem" type="password" id="current-password" name="current-password">
+				</div>
+				<div class="form-elem form-input">
+					<label for="new-password">New password</label>
+					<input class="form-elem" type="password" id="new-password" name="new-password">
+				</div>
+			</div>
+			<button class="form-elem" type="submit">Change password</button>
 		</form>
 	</div>
 
