--- a/client/web/template/signup.html
+++ b/client/web/template/signup.html
@@ -12,15 +12,15 @@
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
-					<input class="form-elem" type="email" id="email" name="email" placeholder="user@example.com">
+					<input class="form-elem" type="email" id="email" name="email" placeholder="user@example.com" required>
 				</div>
 				<div class="form-elem form-input">
 					<label for="password">Password</label>
-					<input class="form-elem" type="password" id="password" name="password">
+					<input class="form-elem" type="password" id="password" name="password" required>
 				</div>
 				<div class="form-elem form-input">
 					<label for="password-confirm">Confirm password</label>
-					<input class="form-elem" type="password" id="password-confirm" name="password-confirm">
+					<input class="form-elem" type="password" id="password-confirm" name="password-confirm" required>
 				</div>
 			</div>
 			<button class="form-elem" type="submit">Sign up</button>
