--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -19,7 +19,7 @@
 					<input class="form-elem" type="password" id="password" name="password" required>
 				</div>
 			</div>
-			<button class="form-elem" type="submit">Login</button>
+			<button class="form-elem submit-btn" type="submit">Login</button>
 
 			<div class="form-elem to-signup">
 				<p>Do not have an account?</p>
