--- a/client/web/template/profile.html
+++ b/client/web/template/profile.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="/static/css/profile.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/signup_login.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/profile.css">
 {% endblock %}
 
 {% block title %}Profile | Filmer{% endblock %}
@@ -39,7 +39,7 @@
 					<input class="form-elem" type="password" id="new-password" name="new-password">
 				</div>
 			</div>
-			<button class="form-elem" type="submit">Change password</button>
+			<button class="form-elem change-passwd-btn" type="submit">Change password</button>
 		</form>
 	</div>
 
