--- a/client/web/template/signup.html
+++ b/client/web/template/signup.html
@@ -23,7 +23,7 @@
 					<input class="form-elem" type="password" id="password-confirm" name="password-confirm" required>
 				</div>
 			</div>
-			<button class="form-elem" type="submit">Sign up</button>
+			<button class="form-elem submit-btn" type="submit">Sign up</button>
 
 			<div class="form-elem to-login">
 				<p>Already have an account?</p>
