Remove hover sort and filters for mobile adaptive

--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -345,4 +345,8 @@
 	.settings {
 		width: 325px;
 	}
+
+	.sort-field-link:hover, .sort-order-link:hover, .filters-submit-btn:hover, .checkbox-btn:hover {
+		color: var(--light-gray);
+	}
 }
