Fix hover color for mobile adaptive

--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -347,6 +347,6 @@
 	}
 
 	.sort-field-link:hover, .sort-order-link:hover, .filters-submit-btn:hover, .checkbox-btn:hover {
-		color: var(--light-gray);
+		color: var(--white);
 	}
 }
