Last fix hover color for mobile adaptive

--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -346,7 +346,7 @@
 		width: 325px;
 	}
 
-	.sort-field-link:hover, .sort-order-link:hover, .filters-submit-btn:hover, .checkbox-btn:hover {
+	.sort-field-link:hover, .sort-order-link:hover, .radio-button label:hover, .checkbox-btn:hover {
 		color: var(--white);
 	}
 }
