Fixed path prefix setting in client templates

--- a/client/web/template/base.html
+++ b/client/web/template/base.html
@@ -28,19 +28,19 @@
 			</div>
 			<div class="right-nav-container">
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-search-link" href="/movie/search">search</a>
+					<a id="menu-search-link" href="/filmer/movie/search">search</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-stared-link" href="/user-movie/stared">stared</a>
+					<a id="menu-stared-link" href="/filmer/user-movie/stared">stared</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-want-link" href="/user-movie/want">want</a>
+					<a id="menu-want-link" href="/filmer/user-movie/want">want</a>
 				</button>
 				<button class="nav-elem nav-menu-button-elem">
-					<a id="menu-watched-link" href="/user-movie/watched">watched</a>
+					<a id="menu-watched-link" href="/filmer/user-movie/watched">watched</a>
 				</button>
 
-				<button class="nav-elem profile"><a href="/user/profile">
+				<button class="nav-elem profile"><a href="/filmer/user/profile">
 					<img src="/static/img/profile.svg" alt="profile">
 				</a></button>
 			</div>
