--- a/client/web/template/index.html
+++ b/client/web/template/index.html
@@ -11,15 +11,15 @@
 		<div class="description">
 			<p class="description-p">Filmer is a service to manage movie lists</p>
 			<p class="description-p">
-				<a href="/movie/search">Search</a> movies,
-				<a href="/user-movie/stared">star</a> it and save it to
-				<a href="/user-movie/want">want</a> or
-				<a href="/user-movie/watched">watched</a> lists
+				<a href="/filmer/movie/search">Search</a> movies,
+				<a href="/filmer/user-movie/stared">star</a> it and save it to
+				<a href="/filmer/user-movie/want">want</a> or
+				<a href="/filmer/user-movie/watched">watched</a> lists
 			</p>
 		</div>
 		<div class="entry-buttons">
-			<button class="link-button"><a href="/user/sign-up">Sign up</a></button>
-			<button class="link-button"><a href="/user/login">Login</a></button>
+			<button class="link-button"><a href="/filmer/user/sign-up">Sign up</a></button>
+			<button class="link-button"><a href="/filmer/user/login">Login</a></button>
 		</div>
 	</div>
 {% endblock %}
