--- a/client/web/template/login.html
+++ b/client/web/template/login.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 	<div class="content">
-		<form onsubmit="addQueryParamsToForm(this)" action="/user/login" method="post">
+		<form onsubmit="addQueryParamsToForm(this)" action="/filmer/user/login" method="post">
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
@@ -23,7 +23,7 @@
 
 			<div class="form-elem to-signup">
 				<p>Do not have an account?</p>
-				<a href="/user/sign-up">Sign up</a>
+				<a href="/filmer/user/sign-up">Sign up</a>
 			</div>
 		</form>
 	</div>
