--- a/client/web/template/signup.html
+++ b/client/web/template/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 	<div class="content">
-		<form onsubmit="addQueryParamsToForm(this)" action="/user/sign-up" method="post">
+		<form onsubmit="addQueryParamsToForm(this)" action="/filmer/user/sign-up" method="post">
 			<div class="form-elem form-input-container">
 				<div class="form-elem form-input">
 					<label for="email">Email</label>
@@ -27,7 +27,7 @@
 
 			<div class="form-elem to-login">
 				<p>Already have an account?</p>
-				<a href="/user/login">Login</a>
+				<a href="/filmer/user/login">Login</a>
 			</div>
 		</form>
 	</div>
