--- a/client/web/template/stared_want_watched.html
+++ b/client/web/template/stared_want_watched.html
@@ -225,7 +225,7 @@
 
 			<div class="list-movies">
 			{% for user_movie in movies %}
-				<a class="movie" href="/user-movie/info/{{ user_movie.movie.kinopoiskID|floatformat:0 }}">
+				<a class="movie" href="/filmer/user-movie/info/{{ user_movie.movie.kinopoiskID|floatformat:0 }}">
 					<div class="movie-poster">
 						<img src='{{ user_movie.movie.imgURL|default:"/static/img/non_poster.svg" }}'>
 					</div>
